--- a/package.json
+++ b/package.json
@@ -8,20 +8,22 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@vuelidate/core": "^2.0.0",
+    "@vuelidate/validators": "^2.0.0",
     "axios": "^1.7.2",
     "bootstrap": "^5.3.2",
     "core-js": "^3.30.1",
     "vue": "^3.3.4",
     "vue-axios": "^3.4.1",
-    "vue-router": "^4.2.5",
-    "@vuelidate/core": "^2.0.0",
-    "@vuelidate/validators": "^2.0.0"
+    "vue-router": "^4.2.5"
   },
   "devDependencies": {
+    "@babel/core": "^7.27.4",
+    "@babel/eslint-parser": "^7.27.5",
     "@vue/cli-plugin-babel": "~5.0.8",
     "@vue/cli-plugin-eslint": "~5.0.8",
     "@vue/cli-service": "~5.0.8",
-    "eslint": "^8.56.0",
+    "eslint": "^8.57.1",
     "eslint-plugin-vue": "^9.20.0",
     "sass": "^1.69.5",
     "sass-loader": "^13.3.2"
